--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="bower_components/flat-ui/dist/css/flat-ui.css">
+    <link rel="stylesheet" href="styles/custom.css">
+
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
