added donation options

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body ng-app="dignityApp">
