--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-01">
           <ul class="nav navbar-nav navbar-left">
-            <li><a href="#">About</a></li>
+            <li><a ui-sref="about">About</a></li>
             <li><a href="#">FAQ</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Donate</a></li>
