--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
             <li><a ui-sref="about">About</a></li>
             <li><a href="#">FAQ</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Donate</a></li>
+            <li><a href="/#/user/superwoman123">Donate</a></li>
             <li><a href="#">Our supporters</a></li>
           </ul>
           <form class="navbar-form navbar-right" action="#" role="search">
