--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body ng-app="dignityApp">
-    <div class="container">
+    <div class="container" ng-controller="rootController">
       <nav class="navbar navbar-embossed" role="navigation">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
@@ -32,10 +32,10 @@
             <li><a href="/#/user/superwoman123">Donate</a></li>
             <li><a href="#">Our supporters</a></li>
           </ul>
-          <form class="navbar-form navbar-right" action="#" role="search">
+          <form ng-submit="searchUsername()" class="navbar-form navbar-right" action="#" role="search">
             <div class="form-group">
               <div class="input-group">
-                <input class="form-control" id="navbarInput-01" type="search" placeholder="Search">
+                <input class="form-control" id="navbarInput-01" type="search" placeholder="Search username">
                 <span class="input-group-btn">
                   <button type="submit" class="btn"><span class="fui-search"></span></button>
                 </span>
